# academic_fraud_detector

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/geng-academic-fraud-detector/: .gitignore  README.md  SKILL.md
.agents/skills/geng-academic-fraud-detector/test/: example-report.md
src/academic_fraud_detector/: __init__.py  crew.py  main.py  web.py
src/academic_fraud_detector/config/: agents.yaml  tasks.yaml
src/academic_fraud_detector/models/: __init__.py  evidence.py  investigation_report.py  paper.py
src/academic_fraud_detector/tools/: __init__.py  citation_analysis.py  image_forensics.py  methodology_audit.py  paper_fetching.py  peer_review_analysis.py  productivity_analysis.py  statistical_analysis.py  text_similarity.py  web_search.py
src/academic_fraud_detector/utils/: api_client.py  case_folder.py  chart_ocr.py  cross_figure_pipeline.py  figure_splitter.py  image_downloader.py  mineru_client.py  raw_data_loader.py  raw_data_precheck.py  si_downloader.py  table_extraction.py  text_extraction.py
src/academic_fraud_detector/web_static/: app.js  index.html  styles.css
tests/: test_case_folder.py  test_local_pdf_kickoff.py  test_raw_data_loader.py  test_raw_data_precheck.py  test_webui.py
tests/test_tools/: test_models.py  test_paper_fetching.py  test_statistical_analysis.py  test_text_similarity.py
tests/test_utils/: test_cross_figure_pipeline.py  test_figure_splitter.py  test_mineru_client.py  test_paper_claims.py  test_text_extraction.py
