[project]
name = "academic-fraud-detector"
version = "0.1.0"
description = "Multi-agent academic fraud detection system powered by CrewAI"
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Academic Fraud Detection Team" }
]
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "arxiv>=2.1.3",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "camelot-py[cv]>=0.11.0",
    "opencv-python-headless>=4.9.0",
    "pyyaml>=6.0",
    "markdown>=3.7",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.crewai]
type = "crew"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
